Adding Materials Content

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="hero-text">
-          <h1>About Me</h1>
+          <h1><u>About Me</u></h1>
           <p class="lead">
             I'm Iara Cristina, a 21-year-old student currently at the last year on my Master degree's of Applied Mathematics and Data Science at FGV (Fundação Getúlio Vargas). <br> <br>
             Born into a world where academia was not just a profession but a way of life, both my parents served as professors at UENF (Universidade Estadual Norte Fluminense Darcy Ribeiro).
@@ -84,9 +84,9 @@
 
   <main class="container">
     <!-- When passing the cursor through CV show Download text-->
-    <h1 href="files/Iara_Castro_CV.pdf" download="Iara_Castro_CV.pdf" title="Download CV">
-      Resume
-    </h1>
+    <a href="cv.pdf" download="Iara_Castro_CV.pdf" title="Download CV" target="_blank">
+      <h1><u>Resume</u></h1>
+    </a>
     <h2>Education</h2> 
     <hr class="gradient">
     <section class="exp-card">
