--- a/materials.html
+++ b/materials.html
@@ -32,60 +32,68 @@
 
   <main class="container">
     <h1>Statistics</h1>
-    <section class="card1">
-      <p style="font-family:Calibri">Statistical Inference</p>
-    </section>
+    <div class="topics-grid">
+      <a href="materials/statistical-inference.html" class="topic-card">
+        <h3>Statistical Inference</h3>
+      </a>
 
-    <section class="card2">
-      <p style="font-family:Calibri">Statistical Modelling</p>
-    </section>
+      <a href="materials/statistical-modelling.html" class="topic-card">
+        <h3>Statistical Modelling</h3>
+      </a>
 
-    <section class="card1">
-      <p style="font-family:Calibri">Causality</p>
-    </section>
+      <a href="materials/causality.html" class="topic-card">
+        <h3>Causality</h3>
+      </a>
+    </div>
   </main>
 
   <main class="container">
     <h1>Finances</h1>
-    <section class="card1">
-      <p style="font-family:Calibri">Stochastic Processes</p>
-    </section>
+    <div class="topics-grid">
+      <a href="materials/stochastic-processes.html" class="topic-card">
+        <h3>Stochastic Processes</h3>
+      </a>
 
-    <section class="card2">
-      <p style="font-family:Calibri">Mathematical Methods in Finance</p>
-    </section>
+      <a href="materials/mathematical-methods-finance.html" class="topic-card">
+        <h3>Mathematical Methods in Finance</h3>
+      </a>
 
-    <section class="card1">
-      <p style="font-family:Calibri">Financial Mathematics</p>
-    </section>
+      <a href="materials/financial-mathematics.html" class="topic-card">
+        <h3>Financial Mathematics</h3>
+      </a>
+    </div>
   </main>
 
   <main class="container">
     <h1>Artificial Intelligence</h1>
-    <section class="card1">
-      <p style="font-family:Calibri">Machine Learning</p>
-    </section>
+    <div class="topics-grid">
+      <a href="materials/machine-learning.html" class="topic-card">
+        <h3>Machine Learning</h3>
+      </a>
 
-    <section class="card2">
-      <p style="font-family:Calibri">Deep Learning</p>
-    </section>
+      <a href="materials/deep-learning.html" class="topic-card">
+        <h3>Deep Learning</h3>
+      </a>
+    </div>
   </main>
 
-    <main class="container">
+  <main class="container">
     <h1>Fundamentals</h1>
-    <section class="card1">
-      <p style="font-family:Calibri">Linear Algebra</p>
-    </section>
+    <div class="topics-grid">
+      <a href="materials/linear-algebra.html" class="topic-card">
+        <h3>Linear Algebra</h3>
+      </a>
 
-    <section class="card2">
-      <p style="font-family:Calibri">Probability</p>
-    </section>
+      <a href="materials/probability.html" class="topic-card">
+        <h3>Probability</h3>
+      </a>
 
-    <section class="card1">
-      <p style="font-family:Calibri">Real Analysis</p>
-    </section>
+      <a href="materials/real-analysis.html" class="topic-card">
+        <h3>Real Analysis</h3>
+      </a>
+    </div>
   </main>
-
+  
   <footer class="footer">
     <div class="container">
       <small>© <span id="y"></span> Iara Castro</small>
